<resources>
    <string name="app_name">Weight Tracker</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="weight_history">Weight History</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="weight">Weight</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="actions">Actions</string>
</resources>